Don't filter by month if product is non PAYG in instance API -add UOM to instance API request